# QuantumMessaging

./: README.md  Untitled Diagram.drawio  attempted_brute_force.py  ccakem.py  client.py  pyproject.toml  secret.txt  server.py  test.py  util.py
brute_force/: brute_force.py
man_in_the_middle_attack/: client.py  helpers.py  man_in_the_middle.py  server.py
tests/: test_ccakem.py  test_cpake.py  test_indcpa.py  test_ntt.py  test_poly.py  test_prf.py  test_util.py
utilities/: ccakem.py  cipher.txt  cpake.py  indcpa.py  ntt.py  poly.py  prf.py  priv.txt  pub.txt  test.py  util.py
